display overall score w/ zlib

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
                         <div>
                             <h2><a href="/download">👉Download submission.zip</a></h2>
                             <h2>Problems</h2>
-                            <h3>Current Estimated Score: {{ overall_score }}</h3>
+                            <h3>Current Estimated Score: {{ overall_score.normal }} ({{ overall_score.best }})</h3>
                         </div>
                         <div>
                             <button id="sync-shortest-btn" class="btn btn-primary">
